finish off this playthru of the campaign

--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -116,6 +116,8 @@
 
         {UNSTORE_HEROES 3 10}
 
+        # TODO: modify which direction they're facing
+
         {04_INTRODUCTION_DIALOGUE}
 
         {HIGHLIGHT_IMAGE 44 17 scenery/monolith3.png ()}
