--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -127,6 +127,8 @@
 
         {UNSTORE_HEROES 6 21}
 
+        # TODO: modify which direction they're facing
+
         # ***** Saurian starting units *****
 
         {LOYAL_UNIT 2 (Saurian Augur) 35 3}
