--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -81,8 +81,8 @@
         controller=human
         recruit=Spearman,Bowman,Young Ogre,She Ogre
         x,y=29,20
-        {GOLD 180 140 100}
-        {INCOME 3 2 1}
+        {GOLD 190 145 100}
+        {INCOME 6 4 2}
         team_name=Wesnothians
         user_team_name= _ "Wesnothians"
         {FLAG_VARIANT loyalist}
@@ -134,27 +134,41 @@
             [/unstore_unit]
         {NEXT i}
 
+#define FACING_S
+        [+unit]
+            facing=s
+        [/unit]
+#enddef
+
 #ifdef HARD
-        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 17 4 (Trug) ("Trug")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 17 6 (Bolg) ("Bolg")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 20 5 (Snak) ("Snak")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 23 6 (Zagr) ("Zagr")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 26 4 (Lugh) ("Lugh")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 27 6 (Beri) ("Beri")}
+        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 17 4 (Trug) ("Trug")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 17 6 (Bolg) ("Bolg")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 20 5 (Snak) ("Snak")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 23 6 (Zagr) ("Zagr")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Warrior) 26 4 (Lugh) ("Lugh")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Crossbowman) 27 6 (Beri) ("Beri")} {FACING_S}
 #else
-        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 17 4 (Trug) ("Trug")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 17 6 (Bolg) ("Bolg")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 20 5 (Snak) ("Snak")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 23 6 (Zagr) ("Zagr")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 26 4 (Lugh) ("Lugh")}
-        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 27 6 (Beri) ("Beri")}
+        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 17 4 (Trug) ("Trug")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 17 6 (Bolg) ("Bolg")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 20 5 (Snak) ("Snak")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 23 6 (Zagr) ("Zagr")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Grunt) 26 4 (Lugh) ("Lugh")} {FACING_S}
+        {NAMED_LOYAL_UNIT 2 (Orcish Archer) 27 6 (Beri) ("Beri")} {FACING_S}
 #endif
+
+#undef FACING_S
 
         {UNSTORE_HEROES 29 20}
 
         {SCROLL_AND_DELAY 20 2 2000}
 
         {06_STARTING_DIALOGUE}
+
+        [redraw][/redraw]
+
+        [delay]
+            time=123
+        [/delay]
 
         [fire_event]
             name=first_ships_event
@@ -397,6 +411,9 @@
         {GENERIC_UNIT 3 (Naga Warrior) 33 12}
         {GENERIC_UNIT 3 (Naga Fighter) 33 13}
         {GENERIC_UNIT 3 (Naga Warrior) 33 14}
+#ifdef EASY
+        {GENERIC_UNIT 3 (Naga Hunter) 35 14}
+#else
         {GENERIC_UNIT 3 (Naga Warrior) 34 12}
         {GENERIC_UNIT 3 (Naga Fighter) 34 13}
         {GENERIC_UNIT 3 (Naga Warrior) 34 14}
@@ -404,6 +421,7 @@
         {GENERIC_UNIT 3 (Naga Warrior) 35 13}
         {GENERIC_UNIT 3 (Naga Fighter) 35 14}
         {GENERIC_UNIT 3 (Naga Warrior) 35 15}
+#endif
 #endif
 
         {06_NAGAS_ARRIVAL}
