--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -734,6 +734,18 @@
         message= _ "Ah! Ah! Ah! Foul human! You really think that the great Gan-Tarkas needs your ford to overpass a river? I've been preparing myself for months, and now I'm ready! Goodbye, little man, you've been good, but not enough to face me! Ah! Ah! Ah!"
     [/message]
     {MOVE_UNIT id=Gan-Tarkas 20 2}
+    {MOVE_UNIT id=Glauco 16 17}
+#ifdef EASY
+    [message]
+        speaker=Glauco
+        message= _ "Let's get some extra fortifications set up, men!"
+    [/message]
+    [terrain]
+        x=16,15,17
+        y=16,18,18
+        terrain=Ce
+    [/terrain]
+#endif
 #enddef
 
 #define 06_BOATS_01
