update Ogre advancement
1.16 requires [modify_unit_type] instead of [advancefrom]
(also run wmlindent again)

--- a/_main.cfg
+++ b/_main.cfg
@@ -41,6 +41,12 @@
 	
 (Novice Level, 6 scenarios + 1 epilogue)"
 
+    [modify_unit_type]
+        type=Ogre
+        add_advancement=EXI_Ogregreat
+        set_experience=76
+    [/modify_unit_type]
+
     [about]
         title = _ "Campaign Design, prose and story Edits"
         [entry]
