--- a/_main.cfg
+++ b/_main.cfg
@@ -93,6 +93,13 @@
             name= "Argesilao"
         [/entry]
     [/about]
+
+    [about]
+        title = _ "Czech Translation"
+        [entry]
+            name= "Septim"
+        [/entry]
+    [/about]
 [/campaign]
 
 #ifdef A_LITTLE_ADVENTURE
