put more comments into the potfile

--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -180,7 +180,7 @@
 #define 02A_INTRODUCTION_03
     [message]
         speaker=Divaid
-        # "I and my friend" works, too, but "Me and my friend" sounds more natural:
+        #po: "I and my friend" works, too, but "Me and my friend" sounds more natural:
         message= _ "There's me, here, representative of Wesnoth's busybodies! Me and my friend Ranfy. And this may also be territory of Wesnoth, but punch me if it isn't the first time I've seen its colors in at least... forty years! What are you doing here right now?"
     [/message]
     [message]
@@ -389,7 +389,7 @@
 #define 03_AGREEMENT_WITH_GLUBTRUB
     [message]
         speaker=Kssihiss
-        # probably meant "land mammal" here, but "lard mammal" makes sense, too, and is funnier:
+        #po: probably meant "land mammal" here, but "lard mammal" makes sense, too, and is funnier:
         message= _ "Ssstupid lard mammal, ssstay out of thisss ssstory or you won't be able to get out!" #wmllint: no spellcheck
     [/message]
     [message]
@@ -565,7 +565,7 @@
     [/message]
     [message]
         speaker=Glauco
-        # This is about as well as I can reword this:
+        #po: This is about as well as I can reword this:
         message= _ "My greetings! I'm the commander Glauco, from Amoran; I came here to reopen the old Amber Road! There is someone in Wesnoth who came back from here who is mighty interested in it!"
     [/message]
     [message]
@@ -721,8 +721,8 @@
     [/message]
     [message]
         speaker=Gan-Tarkas
-        # I thought the usage of "indemnify" here was wrong at first, but then I checked and I guess it works like this after all...
-        # it still might be worth rewording anyways, though.
+        #po: I thought the usage of "indemnify" here was wrong at first, but then I checked and I guess it works like this after all...
+        #po: it still might be worth rewording anyways, though.
         message= _ "I know well they will be angry for the destruction of Amoran, but I'll retire immediately, I will make an act of contrition, I will say that I wanted to avenge Grunto and I'll indemnify Wesnoth with a little bit of gold. But in the meantime there will be nothing here, in the west, that Wesnoth may be interested to defend; and with the time I'll return, stealthily, to take all these territories, and my tribe will become the most powerful tribe of orcs on the whole continent!"
     [/message]
     [message]
