--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -391,7 +391,7 @@
                                 [/message]
                                 [message]
                                     speaker=Mimord
-                                    # This is about as well as I think I can reword this:
+                                    #po: This is about as well as I think I can reword this:
                                     message= _ "That's right, stupid ogre! And we were only missing you to complete my home! Well, if I break your head I will not do much damage, as you don't hold anything in there!"
                                 [/message]
                                 [message]
