--- a/units/Citizen.cfg
+++ b/units/Citizen.cfg
@@ -15,6 +15,7 @@
     advances_to=Merman Brawler,Merman Fighter,Merman Hunter
     cost=9
     usage=fighter
+    #po: Merman Citizens are also in Dead Water; try to keep the description similar:
     description= _ "Mermen are mostly peaceful, but will fight to defend their homes. In this situation, even mermen with no weapons or training can be dangerous."
     die_sound=mermen-die.ogg
     {DEFENSE_ANIM "units/merfolk/citizen-defend.png" "units/merfolk/citizen-defend.png" mermen-hit.wav }
