--- a/utils/ALA_specials.cfg
+++ b/utils/ALA_specials.cfg
@@ -7,6 +7,7 @@ _ " This unit is able to stun its enemies, disrupting their zones of control."#e
     [damage]
         id=tail_stun
         name= _ "stun"
+        #po: the "stun" ability is also in some mainline campaigns, I think; try to keep the translation string similar:
         description= _ "This attack hits so hard that the opponent is dazed and can no longer enforce a zone of control. The effect wears off on the opponent’s next turn."
         multiply=1
     [/damage]
