minor translation note update

--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -212,7 +212,9 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "After we bring Dadoc to justice, we'll go to east to meet the nereids; could you come with us as a guide? I have a desperate need someone who knows the wildlands, and I'll pay well."
+        #po: "nereids" are the Italian name for merfolk in general, but I felt like keeping it in English just under the idea that here it would refer to the specific group of merfolk
+        #po: who live to the east of Wesnoth.
+        message= _ "After we bring Dadoc to justice, we'll go east to meet the nereids; could you come with us as a guide? I have a desperate need for someone who knows the wildlands, and I'll pay well."
     [/message]
     [message]
         speaker=Divaid
