add a script for updating translations
also fix textdomain for female ogres so they show up in the potfile

--- a/units/Matronly_Ogresses.cfg
+++ b/units/Matronly_Ogresses.cfg
@@ -1,4 +1,5 @@
-#textdomain wesnoth-ttss
+#textdomain wesnoth-ala
+# (originally wesnoth-ttss)
 
 [unit_type]
     id=Matronly Ogresses
@@ -20,7 +21,7 @@
     alignment=neutral
     cost=30
     usage=healer
-    description= _ "Rising in age the she-ogre gain weight, so they loss the agility necessary to use sling, but, in counterpart, gains the capability to use better bigger club"+{SPECIAL_NOTES}+{SPECIAL_NOTES_HEALS}+{SPECIAL_NOTES_UNPOISON}
+    description= _ "As they grow older, she-ogres gain weight, so they lose the agility necessary to use a sling, but, in exchange, they gain the capability to use a bigger and better club."+{SPECIAL_NOTES}+{SPECIAL_NOTES_HEALS}+{SPECIAL_NOTES_UNPOISON}
     die_sound={SOUND_LIST:OGRE_DIE}
     [portrait]
         size=400
