--- a/units/She_Ogre.cfg
+++ b/units/She_Ogre.cfg
@@ -1,4 +1,5 @@
-#textdomain wesnoth-ttss
+#textdomain wesnoth-ala
+# (originally wesnoth-ttss)
 
 [unit_type]
     id=She Ogre
@@ -19,7 +20,8 @@
     alignment=neutral
     cost=16
     usage=healer
-    description= _ "A bit less stupid than their male counterpart, the ogre female pass the first part of their life to learn how use herbs and minerals to cure wound and poisoness, and the second part to apply this knowledge to the male ogres; they don't like iron weapons but use efficently a small but hard club of wood and a leather sling to defense herself."+{SPECIAL_NOTES}+{SPECIAL_NOTES_HEALS}+{SPECIAL_NOTES_UNPOISON}
+    #po: reworded a bit:
+    description= _ "A bit less stupid than their male counterparts, the ogre females spend the first part of their lives learning how use herbs and minerals to cure wound and poisons, and secondly, how to apply this knowledge to the male ogres. They don't like iron weapons, but rather, they efficently use small but hard clubs of wood, and leather slings, to defend themselves."+{SPECIAL_NOTES}+{SPECIAL_NOTES_HEALS}+{SPECIAL_NOTES_UNPOISON}
     die_sound={SOUND_LIST:OGRE_DIE}
     [portrait]
         size=400
