more translation note updates

--- a/_main.cfg
+++ b/_main.cfg
@@ -10,6 +10,10 @@
     rank=310
     icon="units/human-loyalists/sergeant-attack-sword-1.png~RC(magenta>red)"
     image="data/add-ons/A_Little_Adventure/images/campaign_image.png"
+    #po: Strings from utils/ALA_Deaths.cfg used to get put in the potfile
+    #po: before strings from this file at one point, so see the translation
+    #po: comments from that file for a note that applies to the campaign
+    #po: as a whole.
     name= _ "A Little Adventure"
     abbrev= _ "ALA"
     define="A_LITTLE_ADVENTURE"
@@ -37,7 +41,8 @@
     [/difficulty]
 
     # wmllint: general spellings Wesnothian
-    description= _ "A young Wesnothian army officer is sent to command a tiny garrison in an insignificant town in the wilds of the far east; unexpectedly it will manage not only the defense of the town, but also its economic rebirth, committing itself to reopening the legendary Amber Road! "+ _ "
+    #po: the "young Wesnothian army officer" is Glauco (male); the "he" refers to him:
+    description= _ "A young Wesnothian army officer is sent to command a tiny garrison in an insignificant town in the wilds of the far east; unexpectedly he will manage not only the defense of the town, but also its economic rebirth, committing itself to reopening the legendary Amber Road! "+ _ "
 	
 (Novice Level, 6 scenarios + 1 epilogue)"
 
@@ -97,7 +102,7 @@
     [about]
         title = _ "Czech Translation"
         [entry]
-            name= "Septim"
+            name= "Septim, Celerini"
         [/entry]
     [/about]
 [/campaign]
