--- a/utils/ALA_deaths.cfg
+++ b/utils/ALA_deaths.cfg
@@ -8,14 +8,14 @@
         [/filter]
         [message]
             speaker=Glauco
-            #po: Since this is the first message that gets put in the potfile,
-            #po: I guess this is as good a place as any to put general-purpose
-            #po: translation notes for the whole add-on: This campaign was
-            #po: originally written by someone whose primary language is Italian.
-            #po: I have tried to clean up the English so that it sounds more
-            #po: natural, but some things may still be phrased oddly. If there is
-            #po: ever any English wording that you are having trouble with, and you
-            #po: also speak Italian, it may be worth consulting the Italian
+            #po: Since this is (or at least was, at one point) the first message
+            #po: that gets put in the potfile, I guess this is as good a place
+            #po: as any to put general-purpose translation notes for the whole add-on:
+            #po: This campaign was originally written by someone whose primary
+            #po: language is Italian. I have tried to clean up the English so that it
+            #po: sounds more natural, but some things may still be phrased oddly.
+            #po: If there is ever any English wording with which you are having trouble,
+            #po: and you also speak Italian, it may be worth consulting the Italian
             #po: original and just translating directly from that instead of
             #po: translating from the English version.
             message= _ "All is lost, now that I die..."
