--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -15,7 +15,7 @@
     [message]
         # wmllint: local spellings Titus
         speaker=Titus
-        message= _ "Commander, look at the hills in the north, during last night a group of orcs camped over the river!"
+        message= _ "Commander, look at the hills in the north! Last night a group of orcs camped over on the other side of the river!"
     [/message]
     {SCROLL_AND_DELAY 20 1 1500}
     [message]
@@ -29,6 +29,7 @@
     {SCROLL_AND_DELAY 34 21 1500}
     [message]
         speaker=Glauco
+        #po: "reputation" might actually work better than "fame" here:
         message= _ "And their fame is even less reassuring than their appearance! Those approaching are the cutthroats of the Dadoc band. He came here to collect something, and it's definitely not the reward on his head."
     [/message]
     [message]
@@ -45,6 +46,8 @@
     [/message]
     [message]
         speaker=Dadoc
+        #po: speaking to Grunto, so both "orc" and "you" refer to him. There don't currently exist any "slaves" yet;
+        #po: the "slaves" to which he refers are what the prisoners they capture will become:
         message= _ "Remember the pacts, orc; I take the food and all the valuables, you take all the slaves!"
     [/message]
     [message]
