--- a/units/Matronly_Ogresses.cfg
+++ b/units/Matronly_Ogresses.cfg
@@ -21,7 +21,7 @@
     alignment=neutral
     cost=30
     usage=healer
-    description= _ "As they grow older, she-ogres gain weight, so they lose the agility necessary to use a sling, but, in exchange, they gain the capability to use a bigger and better club."+{SPECIAL_NOTES}+{SPECIAL_NOTES_HEALS}+{SPECIAL_NOTES_UNPOISON}
+    description= _ "As they grow older, she-ogres gain weight, so they lose the agility necessary to use slings, but, in exchange, they gain the capability to use bigger and better clubs."+{SPECIAL_NOTES}+{SPECIAL_NOTES_HEALS}+{SPECIAL_NOTES_UNPOISON}
     die_sound={SOUND_LIST:OGRE_DIE}
     [portrait]
         size=400
