one more translation note

--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -36,6 +36,7 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 
 #define SCENARIO_02A_STORY_01
     # wmllint: directory spellings Dadoc Grunto
+    #po: yes, the third sentence here is kind of a run-on; suggestions on how to reword it are welcome:
     story=_ "Having defeated Grunto the Orc, Glauco thought it was time to settle the accounts with Dadoc and his band. The arrival of Geobard with orders of Wesnoth allowed Glauco to leave peasants and woodcutters to their jobs and to enlist other soldiers. When he felt he had enough soldiers, that is, when he didn't have any more money available, he set off towards the forest in which, as everyone knew, Dadoc took refuge to lick his wounds, as in this case, or to enjoy the fruits of his raids."
 #enddef
 
