more translation notes

--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -99,6 +99,7 @@
         [objectives]
             side=1
             [objective]
+                #po: The inclusion of "Squash" as a synonym for "Defeat" in this objective is for the benefit of Glubtrub:
                 description= _ "Squash... or... Defeat the Saurian Chief"
                 condition=win
             [/objective]
