--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -387,6 +387,7 @@
     [/message]
     [message]
         speaker=Kssihiss
+        #po: see https://tvtropes.org/pmwiki/pmwiki.php/Main/SssssnakeTalk ("reconquessst" = "reconquer"):
         message= _ "Humansss? After all thisss time they wantsss to reconquessst this place? They'll find only their deathsss!" # wmllint: no spellcheck
     [/message]
 #enddef
@@ -394,7 +395,8 @@
 #define 03_AGREEMENT_WITH_GLUBTRUB
     [message]
         speaker=Kssihiss
-        #po: probably meant "land mammal" here, but "lard mammal" makes sense, too, and is funnier:
+        #po: The original author probably meant "land mammal" here, but "lard mammal" makes sense, too, and is funnier.
+        #po: It's not necessary to preserve this pun in your own language, though, if it doesn't work:
         message= _ "Ssstupid lard mammal, ssstay out of thisss ssstory or you won't be able to get out!" #wmllint: no spellcheck
     [/message]
     [message]
@@ -403,7 +405,7 @@
     [/message]
     [message]
         speaker=Glubtrub
-        #po: "Wetspot" is ogre-speak for "Wesnoth"
+        #po: "Wetspot" is ogre-speak for "Wesnoth"; I will try to ensure it's capitalized consistently:
         message= _ "Glubtrub to hate snake! Little fat to eat and bad! They to kill our puppies when they to play near ruins! But soldier with colors of Wetspot never to be friends ogres... I believe... I don't remember well!"
     [/message]
     [message]
@@ -412,11 +414,15 @@
     [/message]
     [message]
         speaker=Glubtrub
+        #po: Normally the way of making ogres sound stupid in English is pretty similar in terms of failing to conjugate verbs,
+        #po: but instead normally the word "to" also gets left out of the infinitives. However, I am leaving the word "to" in
+        #po: all of the ogre-spoken infinitives in this campaign, as it is a funny mistake to make, and only the kind of mistake
+        #po: that a non-native speaker could make, which the ogres technically count as:
         message= _ "Understand little, but... meanwhile to squash snakes, to understand well after!"
     [/message]
     [message]
         speaker=Geobard
-        message= _ "(To Glauco) I don't understand, Weren't we supposed to free the amber way? With the ogres settled here, how are we going to do this?"
+        message= _ "(<i>To Glauco</i>) I don't understand! Weren't we supposed to free the amber way? With the ogres settled here, how are we going to do this?"
     [/message]
     [message]
         speaker=Glauco
@@ -435,6 +441,7 @@
     [/message]
     [message]
         speaker=Glubtrub
+        #po: I'm assuming he means "sole" as in "the sole of a shoe" here?
         message= _ "Nice! Snakes make flat like sole into the river, flat-flat! You like me, man of Wetspot! I to come with you, and together to come to squash world!"
     [/message]
     [message]
@@ -447,6 +454,7 @@
     [/message]
     [message]
         speaker=Glauco
+        #po: The ogre's speech patterns are starting to rub off on Glauco:
         message= _ "So... therefore... not usually... I believe. However, the enemies of Wetspot... er Wesnoth, would be those who live in the territory of Wesnoth and don't respect its laws, or those who want to take possession of the goods or of the life of the inhabitants of Wesnoth."
     [/message]
     [message]
@@ -455,6 +463,8 @@
     [/message]
     [message]
         speaker=Glauco
+        #po: "Beh" is just a sound, but I suppose it could also be a portmanteau of
+        #po: "Bah" (sound of dismissal/frustration) and "Meh" (sound of indifference/uncaringness):
         message= _ "Beh, I suppose that can be acceptable in this way! Glad to have you with us, Glubtrub, your strength will be useful to us!"
     [/message]
 #enddef
