--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -173,8 +173,8 @@
         first_time_only=yes
         [message]
             speaker=Glubtrub
-            #po: "wetspot" is ogre-speak for "Wesnoth"
-            message= _ "What this confusion? Men colored like wetspot and snake to fight? Ogres to come too, good chance to squash all!"
+            #po: "Wetspot" is ogre-speak for "Wesnoth"; I will try to ensure it's capitalized consistently:
+            message= _ "What this confusion? Men colored like Wetspot and snake to fight? Ogres to come too, good chance to squash all!"
         [/message]
         {LOYAL_UNIT 3 (Young Ogre) 22 19}
         {LOYAL_UNIT 3 (Matronly Ogresses) 24 19}
