--- a/units/Brawler.cfg
+++ b/units/Brawler.cfg
@@ -16,7 +16,7 @@
     cost=19
     usage=fighter
     #po: Brawlers are also in Dead Water; try to keep the description similar:
-    description= _ "Exceptionally large and strong mermen are sometimes more comfortable with their own fists and tails than with other weapons."+{SPECIAL_NOTES}+{SPECIAL_NOTES_STUN}
+    description= _ "Exceptionally large and strong mermen are sometimes more comfortable with their own fists and tails than with other weapons."
     die_sound=mermen-die.ogg
     {DEFENSE_ANIM "units/merfolk/brawler-defend.png" "units/merfolk/brawler-defend.png" mermen-hit.wav }
     [portrait]
