--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -548,7 +548,8 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "How you can have fear of a pet that's so much smaller than you, Glubtrub?"
+        #po: this said "pet" originally, but... I don't think the bats are actually pets though?
+        message= _ "How are you afraid of an animal that's so much smaller than you, Glubtrub?"
     [/message]
     [message]
         speaker=Glubtrub
