update translation notes

--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -577,6 +577,8 @@
     [message]
         # wmllint: directory spellings Joralda
         speaker=Joralda
+        #po: "colors" refer to flags that they're flying; I'm not sure why Joralda is referring to himself in the third person; maybe it's supposed to be like the "royal we"?
+        #po: I should probably reword...
         message= _ "Welcome, foreigners! It's been a long time since we last saw the colors of Wesnoth around here! Joralda is curious to find out why I come back to see them right now."
     [/message]
     [message]
@@ -700,6 +702,7 @@
     {MOVE_UNIT id=Glauco 17 13}
     [message]
         speaker=Glauco
+        #po: TODO: use Glauco's actual rank; he's probably advanced past "sergeant" by now:
         message= _ "I'm the sergeant Glauco, military commander of the city of Amoran! I ask to speak with the warlord called Gan-Tarkas."
     [/message]
     {MOVE_UNIT id=Gan-Tarkas 19 11}
