--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -1,5 +1,7 @@
 #textdomain wesnoth-ala
 
+    # TODO: all instances of the word "sergeant" in this file: check and see if they can be replaced by Glauco's actual rank
+
 #define SCENARIO_01_STORY_01
     # wmllint: general spellings Wesnoth Li'sar Irdya Elensefar Weldyn
     # wmllint: directory spellings Abelardo Gozman Guberto Piegafetta
@@ -30,6 +32,7 @@ The town, now reduced to a village, had become so unimportant that it wasn't aff
 #enddef
 
 #define SCENARIO_01_STORY_04
+    #po: First scenario, before any gameplay, so we can be sure "sergeant" is correct here:
     story=_ "This is the story of a bold young man named Glauco, whose fresh nomination as a sergeant counterbalanced the sending, as commander, to the meager garrison of Amoran. Others would have despaired, and not wrongly, Glauco, instead realized that for a sergeant without a name and without money, as he was, that command could be the occasion of his life to make a name for himself!
 He departed full of enthusiasm and arrived at his destination full of ideas, all unworkable, matured in two weeks of travel. As soon as he arrived, and after the initial discouragement that gave him the resigned appearance of the town and the miserable composition of the garrison placed under his command, he rolled up his sleeves and said to himself: I will show my worth, at the first occasion! After a few very long and very boring months, the opportunity finally presented itself, but it didn't have a beautiful face at all."
 #enddef
@@ -41,11 +44,13 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 #enddef
 
 #define SCENARIO_02A_STORY_02
+    #po: check "sergeant" usage:
     story=_ "But, having departed with plenty of enthusiasm, our sergeant lost much of his boldness when he found himself on the edge of the forest; there was no trace of paths anywhere, and the trunks of the trees were so thick as to look like the walls of a fortress, so the question arose of how to find someone in a similar green jumble. 'Meanwhile, let's mount a camp for the night,' he told himself, 'Tomorrow we'll see what to do.'"
 #enddef
 
 #define SCENARIO_02B_STORY_01
     # wmllint: general spellings orcish
+    #po: check "sergeant" usage:
     story=_ "With Dadoc's gang out of the games, and emboldened by the victory obtained and by his new commander prerogatives, Glauco decided to face at least one of others Amoran's problems, that's to say Grunto the orc; as Grunto was not a member of the tribes associated with the Northern Alliance, it would be unlikely that other orcish chiefs would help him, especially now that he had already been defeated in the previous battle, and therefore he saw his reputation finish, as it's called among the orcs, in a troll latrine. However, emboldening had not meant that he had become stupid, for the young sergeant. A campaign in hostile territory, against forces with only partly-known numbers, was, however, risky and full of unknowns."
 #enddef
 
@@ -96,11 +101,13 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 #enddef
 
 #define EPILOGUE_STORY_02
+    #po: Glauco has probably advanced past "sergeant" by now...
     story=_ "Glauco and Geobard went to the capital to report, on what had happened, to their august and a little distracted sovereign. When the mission was accomplished, the sergeant Glauco found himself promoted to general without having been an officer before. When the king asked him what garrison he wanted to be assigned to, he replied, after a brief reflection - Amoran will be fine, there is a lot of work to do, again, and I don't like to leave things in half -
 And there were many things to do in Amoran, but Glauco, who was also appointed civil governor of the town and of all the wild lands to the east of it, did it with enthusiasm, because he had grown fond of the place, and the large cities of the west seemed now, to him, suffocating."
 #enddef
 
 #define EPILOGUE_STORY_03
+    #po: FIXME: run-on:
     story=_ "The renewed amber trade did not bring to the town all the benefits that Glauco had hoped, but the market that was held there twice a year, in spring and autumn, when the Nereids went up the river, slowly spread the notoriety of the place in all the kingdom and in the lands of the northern alliance, thus ending up attracting settlers eager for new spaces and willing to spend effort and sweat to build something; the wild lands became a little less savage and a little more inhabited; nothing that, for heaven's sake, the land was so great and the colonists were still few, but it was enough because the decadence of Amoran would undergo a quiet but constant rebirth."
 #enddef
 
