--- a/utils/ALA_deaths.cfg
+++ b/utils/ALA_deaths.cfg
@@ -161,10 +161,7 @@
         [/filter]
         [message]
             speaker=Divaid
-            #po: sorry, localizers, I know plurals make translation difficult, but otherwise
-            #po: "damned" would lack a noun to modify, and it needs one:
-            # FIXME: gives "wolfs" instead of "wolves" when $second_unit is a wolf:
-            message= _ "Damned $second_unit.race|s! I'll avenge you, my friend!"
+            message= _ "Damn bastards! I'll avenge you, my friend!"
         [/message]
         {INCIDENTAL_MUSIC sad.ogg}
         {VARIABLE ranfy_alive false}
