--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -369,7 +369,7 @@
     [/message]
     {SCOUT_MESSAGE ( _ "I would say it's bad, but I'm afraid it's awful. The old caravan station was partially swallowed up by the river, and it seems that a group of Nagas have nestled there.")}
     {SCROLL_AND_DELAY 30 7 1500}
-    {SCOUT_MESSAGE ( _ "Also, on the hills just to the south of there are small buildings, and from the stench that comes out I would say they are Ogre huts.")}
+    {SCOUT_MESSAGE ( _ "Also, on the hills just to the south, there are small buildings, and from the stench that comes out I would say they are Ogre huts.")}
     {SCROLL_AND_DELAY 23 21 1000}
     [message]
         speaker=Glauco
