--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -241,7 +241,7 @@
     [/message]
     [message]
         speaker=Divaid
-        message= _ "Because Dadoc will escape when he sees his henchmen fail to stop us in a short time. He's a very cautious guy. We have to find him quickly, otherwise we can also say him good-bye forever."
+        message= _ "Because Dadoc will escape when he sees his henchmen fail to stop us in a short time; he's a very cautious guy. We have to find him quickly, otherwise we can also say him good-bye forever."
     [/message]
     [message]
         speaker=Glauco
