--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -437,7 +437,7 @@
 #define 03_FINAL_DIALOGUE
     [message]
         speaker=Glauco
-        message= _ "The station is free and so is the river! Good work, my soldiers!"
+        message= _ "The station is free, and the river, too! Good work, my soldiers!"
     [/message]
     [message]
         speaker=Glubtrub
