--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -813,7 +813,7 @@
     [/message]
     [message]
         speaker=Geobard
-        message= _ "Woe, they are coming from the river, commander!"
+        message= _ "There's woe coming to us from the river, commander!"
     [/message]
     [message]
         speaker=Glauco
