a few additional translation comments

--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -155,6 +155,8 @@ And there were many things to do in Amoran, but Glauco, who was also appointed c
     [message]
         speaker=Divaid
         # wmllint: directory spellings Divaid Ranfy
+        #po: I'm not sure if "yahoos" is meant in the sense of "yokels/bumpkins/goofballs" (i.e. a person) or "shouts of glee" (i.e. a noise);
+        #po: I'm not sure what is meant by "nosecrops" either:
         message= _ "Divaid and Ranfy returned to their woods, mumbling that they had helped the Wesnothians to fill their house of westerner yahoos; but they didn't really have to give them those nosecrops, since when they lost something or someone, or lost themselves in those unknown territories, Ranfy was always ready to hover in the sky and put his very sharp sight at disposal to find what or who had been missing."
     [/message]
 #enddef
@@ -187,6 +189,7 @@ And there were many things to do in Amoran, but Glauco, who was also appointed c
     [/message]
     [message]
         speaker=Glauco
+        #po: https://tvtropes.org/pmwiki/pmwiki.php/Main/FinaleTitleDrop
         message=_ "Glauco did not mind at all, in his serene old age, to tell his adventures to anyone asked him, sons, nephews, or great-grandchildren that they were; but to those who asked him how he managed to become an important man, he always began by saying - Oh, that time was just a little adventure -"
     [/message]
 #enddef
