--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -87,7 +87,7 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 #enddef
 
 #define SCENARIO_06_STORY_02
-    story=_ "But, having come to the town, Glauco had to see that someone, with a lot of fighting spirit and sense of initiative, had already arrived, but had not brought anything that the good and peaceful people of Amoran could really appreciate. Where the small field camp of Grunto's tribe had arisen for the short space of a few days previously, there was now a solid Orcish fortress, and the number of huts surrounding it announced the presence of a considerable number of orcs."
+    story=_ "But, having come to the town, Glauco had to see that someone, with a lot of fighting spirit and sense of initiative, had already arrived, but had not brought anything that the good and peaceful people of Amoran could really appreciate. Where the small field camp of Grunto's tribe had arisen for the short space of a few weeks previously, there was now a solid Orcish fortress, and the number of huts surrounding it announced the presence of a considerable number of orcs."
 #enddef
 
 #define SCENARIO_06_STORY_03
