add a translation comment
closes #26

--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -87,6 +87,8 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 #enddef
 
 #define SCENARIO_06_STORY_02
+    #po: the "short space of a few days previously" is a reference back to the first scenario,
+    #po: not the length of the more-recent journey to the coast and back (which took longer):
     story=_ "But, having come to the town, Glauco had to see that someone, with a lot of fighting spirit and sense of initiative, had already arrived, but had not brought anything that the good and peaceful people of Amoran could really appreciate. Where the small field camp of Grunto's tribe had arisen for the short space of a few days previously, there was now a solid Orcish fortress, and the number of huts surrounding it announced the presence of a considerable number of orcs."
 #enddef
 
