write up character descriptions
also fix up a few things I noticed in the process

--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -13,8 +13,8 @@
     {SCHEDULE_8H}
 
     {INTRO_AND_SCENARIO_MUSIC wanderer.ogg the_deep_path.ogg}
-    {EXTRA_SCENARIO_MUSIC northeners.ogg}
-    {EXTRA_SCENARIO_MUSIC suspence.ogg}
+    {EXTRA_SCENARIO_MUSIC northerners.ogg}
+    {EXTRA_SCENARIO_MUSIC suspense.ogg}
 
     [story]
         [part]
@@ -116,7 +116,12 @@
 
         {UNSTORE_HEROES 3 10}
 
-        # TODO: modify which direction they're facing
+        [modify_unit]
+            [filter]
+                side=1
+            [/filter]
+            facing=se
+        [/modify_unit]
 
         {04_INTRODUCTION_DIALOGUE}
 
@@ -128,7 +133,7 @@
         [/delay]
         [scroll_to_unit]
             [filter]
-                id=Glauco]
+                id=Glauco
             [/filter]
         [/scroll_to_unit]
     [/event]
