--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -50,10 +50,9 @@
         recruit=Saurian Augur,Saurian Skirmisher,Saurian Oracle,Saurian Soothsayer,Saurian Ambusher
         x,y=36,4
         [ai]
-            recruitment_ignore_bad_movement=yes
             grouping=no
             passive_leader=no
-            recruit_diversity=0.5
+            recruitment_diversity=0.5
         [/ai]
         {GOLD 200 300 400}
         {INCOME 8 12 16}
@@ -121,6 +120,12 @@
                 carryover_percentage={ON_DIFFICULTY 80 70 60}
             [/gold_carryover]
         [/objectives]
+#ifdef EASY
+        [terrain]
+            x,y=5,21-22
+            terrain=Ce
+        [/terrain]
+#endif
     [/event]
 
     [event]
@@ -128,7 +133,12 @@
 
         {UNSTORE_HEROES 6 21}
 
-        # TODO: modify which direction they're facing
+        [modify_unit]
+            [filter]
+                side=1
+            [/filter]
+            facing=se
+        [/modify_unit]
 
         # ***** Saurian starting units *****
 
