--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -385,6 +385,12 @@
         speaker=Glauco
         message= _ "We'll have to take the risk. Get ready, men, it will be a tough fight!"
     [/message]
+    [modify_unit]
+        [filter]
+            side=2
+        [/filter]
+        facing=sw
+    [/modify_unit]
     [message]
         speaker=Kssihiss
         #po: see https://tvtropes.org/pmwiki/pmwiki.php/Main/SssssnakeTalk ("reconquessst" = "reconquer"):
@@ -574,6 +580,12 @@
 #enddef
 
 #define 05_INTRODUCTION_DIALOGUE
+    [modify_unit]
+        [filter]
+            side=3
+        [/filter]
+        facing=nw
+    [/modify_unit]
     [message]
         # wmllint: directory spellings Joralda
         speaker=Joralda
@@ -593,6 +605,12 @@
         speaker=Glauco
         message= _ "Oh, for that, we are already used to facing problems of any kind! What's the ones here?"
     [/message]
+    [modify_unit]
+        [filter]
+            side=3
+        [/filter]
+        facing=ne
+    [/modify_unit]
     [message]
         speaker=Joralda
         message= _ "The deposits of amber, on the island opposite the mouth of the river, are no longer controlled by the Nereids, but by the saurians! And they make our life difficult even if we search for amber pebbles in the depths along the coast."
@@ -623,6 +641,12 @@
         speaker=Glauco
         message= _ "Then, there is only one thing left to do!"
     [/message]
+    [modify_unit]
+        [filter]
+            side=1
+        [/filter]
+        facing=ne
+    [/modify_unit]
     [message]
         speaker=Glubtrub
         message= _ "To squash lizards, Oh Oh Oh! Even Glubtrub understand!"
@@ -631,6 +655,12 @@
         speaker=Mimord
         message= _ "Finally, a bit of exercise for my axe!"
     [/message]
+    [modify_unit]
+        [filter]
+            side=2
+        [/filter]
+        facing=sw
+    [/modify_unit]
     [message]
         speaker=Giksy
         message= _ "Fisssh and mammalsss together, to take our treasssure, I bet! The only metal that they will have will be the iron of our ssspearsss!" # wmllint: no spellcheck
@@ -803,6 +833,12 @@
 #enddef
 
 #define 06_NAGAS_ARRIVAL
+    [modify_unit]
+        [filter]
+            side=3
+        [/filter]
+        facing=nw
+    [/modify_unit]
     [message]
         speaker=Hisskss
         message= _ "Here I am, Gan-Tarkass, I came to help you, asss I promisssed, to avenge my brother Ksshiss, killed by thisss mammalsss! And I alssso put my gold at your disposssal!" # wmllint: no spellcheck
