--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -54,10 +54,9 @@
         name="Kssihiss"
         controller=ai
         canrecruit=yes
-        recruit=Naga Fighter,Naga Warrior,Naga Hunter,Naga Guardian
+        recruit=Naga Fighter,Naga Warrior,Naga Hunter,Naga Guardian,Naga Dirkfang
         x,y=30,7
         [ai]
-            recruitment_ignore_bad_movement=yes
             grouping=no
             passive_leader=no
         [/ai]
@@ -142,7 +141,12 @@
 
         {UNSTORE_HEROES 6 12}
 
-        # TODO: modify which direction they're facing
+        [modify_unit]
+            [filter]
+                side=1
+            [/filter]
+            facing=se
+        [/modify_unit]
 
         {03_INTRODUCTION_DIALOGUE}
 
