--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -9,8 +9,8 @@
 
     {SCHEDULE_8H}
 
-    {INTRO_AND_SCENARIO_MUSIC suspence.ogg heros_rite.ogg}
-    {EXTRA_SCENARIO_MUSIC battle_epic.ogg}
+    {INTRO_AND_SCENARIO_MUSIC suspense.ogg heroes_rite.ogg}
+    {EXTRA_SCENARIO_MUSIC battle-epic.ogg}
     {EXTRA_SCENARIO_MUSIC nunc_dimittis.ogg}
     {EXTRA_SCENARIO_MUSIC journeys_end.ogg}
 
@@ -101,7 +101,7 @@
         canrecruit=yes
         recruit=Orcish Archer,Orcish Grunt,Orcish Assassin,Orcish Crossbowman,Orcish Slayer,Orcish Warrior,Goblin Knight,Goblin Pillager,Wolf Rider
         [ai]
-            recruit_diversity=0.5
+            recruitment_diversity=0.5
         [/ai]
         x,y=20,2
         {GOLD 400 500 600}
@@ -115,9 +115,9 @@
     [side]
         side=3
         type=Naga Myrmidon
-        no_leaders=yes
+        no_leader=yes
         controller=ai
-        recruit=Naga Fighter,Naga Warrior
+        recruit=Naga Fighter,Naga Warrior,Naga Guard,Naga Shield Guard,Naga Dirkfang,Naga Ophidian,Naga Ringcaster
         team_name=Orcs
         user_team_name= _ "Nagas"
         {FLAG_VARIANT6 ragged}
@@ -159,6 +159,13 @@
 #undef FACING_S
 
         {UNSTORE_HEROES 29 20}
+
+        [modify_unit]
+            [filter]
+                side=1
+            [/filter]
+            facing=nw
+        [/modify_unit]
 
         {SCROLL_AND_DELAY 20 2 2000}
 
