some more translation notes

--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -183,7 +183,8 @@
 #define 02A_INTRODUCTION_03
     [message]
         speaker=Divaid
-        #po: "I and my friend" works, too, but "Me and my friend" sounds more natural:
+        #po: "I and my friend" works, too, but "Me and my friend" sounds more natural. Also "punch me" might be a typo for "pinch me", but "hit me" or "slap me" would also work.
+        #po: The idea is that it's so unbeliavable for Divaid to be seeing the colors (flags) of Wesnoth that he assumes he must be dreaming and needs some sort of application of force to wake him up:
         message= _ "There's me, here, representative of Wesnoth's busybodies! Me and my friend Ranfy. And this may also be territory of Wesnoth, but punch me if it isn't the first time I've seen its colors in at least... forty years! What are you doing here right now?"
     [/message]
     [message]
@@ -506,6 +507,7 @@
 #define 04_MIMORD_INTRODUCTION
     [message]
         speaker=Mimord
+        #po: "By my grandfather's beard!" is a humorous dwarvish idiom meant to signify the swearing of an oath:
         message= _ "By my grandfather's beard! Some humans, and even... Wesnothian soldiers? What the hell are you doing here?"
     [/message]
     [message]
@@ -530,6 +532,7 @@
     [/message]
     [message]
         speaker=Mimord
+        #po: "By my sister's moustache" is another humorous dwarvish idiom meant to signify the swearing of an oath:
         message= _ "By my sister's moustache, that is a truly ridiculous statement, commander Glauco, from the mouth of someone who wants to cross these territories! Do you know what I tell you? You have won, I'll come with you for free; I am bored to death here."
     [/message]
     {SCOUT_MESSAGE ( _ "The dwarf is not all wrong! In my opinion it will do more good than bad if he comes with us! Although we should almost be near at the sea, we don't know what we'll find again, and then... there is always the return to Amoran.")}
@@ -539,6 +542,7 @@
     [/message]
     [message]
         speaker=Mimord
+        #po: "By my cousin's hammer" is one more humorous dwarvish idiom meant to signify the swearing of an oath:
         message= _ "Understood! You did a great deal, commander Glauco! But, by my cousin's hammer, you're one tough merchant, to get my services for nothing... my compliments, really."
     [/message]
     [message]
