Add Japanese translation from "chee / k.k"
This also affects the other translations

--- a/_main.cfg
+++ b/_main.cfg
@@ -105,6 +105,14 @@
             name= "Septim, Celerini"
         [/entry]
     [/about]
+
+    [about]
+        # wmllint: general spelling Japanese
+        title = _ "Japanese Translation"
+        [entry]
+            name= "chee / konami,k"
+        [/entry]
+    [/about]
 [/campaign]
 
 #ifdef A_LITTLE_ADVENTURE
